# mcp-client

./: .env.example  .gitignore  README.md  USAGE_EXAMPLES.sh  mcp-servers.sh  pyproject.toml  quickstart-multi.sh  quickstart.sh  test_config.py
conf/: MCP_SERVERS_GUIDE.md  README.md  mcp-servers.json
docs/: skills.md
src/mcp_client/: __main__.py  chat.py  cli.py  colors.py  config.py  handlers.py  mcp_client.py
