[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-client"
dynamic = ["version"]
description = 'MCP client for testing MCP servers.'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "mcp>=1.22.0",
  "openai>=2.8.1",
]

[project.urls]
Documentation = "https://github.com/joao-parana/mcp-client#readme"
Issues = "https://github.com/joao-parana/mcp-client/issues"
Source = "https://github.com/joao-parana/mcp-client"

[project.scripts]
mcp-client = "mcp_client.__main__:cli_main"

[tool.hatch.version]
path = "src/mcp_client/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mcp_client tests}"

[tool.coverage.run]
source_pkgs = ["mcp_client", "tests"]
branch = true
parallel = true
omit = [
  "src/mcp_client/__about__.py",
]

[tool.coverage.paths]
mcp_client = ["src/mcp_client", "*/mcp-client/src/mcp_client"]
tests = ["tests", "*/mcp-client/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
